Fixed overflow issues on mobile

--- a/style.css
+++ b/style.css
@@ -6,19 +6,12 @@
 }
 
 @media only screen and (max-width: 768px){
-<<<<<<< HEAD
 .body-container{
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
     overflow-y: hidden;
     position: relative;
-=======
-body{
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
->>>>>>> cf700b7a94b0bc2dc81a3500ddec079ad7b6b4c3
 }
 
 /* Button */
@@ -94,10 +87,7 @@ nav{
     padding: 10px;
     border: 2px solid gray;
     border-radius: 35px;
-<<<<<<< HEAD
     outline: none;
-=======
->>>>>>> cf700b7a94b0bc2dc81a3500ddec079ad7b6b4c3
 }
 
 /* JS Classes */
